fix: spacing in long responses

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -110,11 +110,6 @@ div[data-testid='stFileUploaderFile'] {
   display: none;
 }
 
-div[data-testid='stVerticalBlockBorderWrapper'] {
-  width: 100%;
-  height: 100%;
-}
-
 div[data-testid='stVerticalBlockBorderWrapper'] > div {
   width: 100%;
   height: 100%;
